# dreco-engine

./: CMakeLists.txt  README.md
.github/workflows/: cmake_build.yml
android/: settings.gradle
android/SDL2/: .gitignore  build.gradle
android/SDL2/src/main/: AndroidManifest.xml
android/SDL2/src/main/SDL2/: README.me
android/app/: .gitignore  build.gradle
android/app/src/androidTest/java/com/gloryofnight/examplegame/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/res/shaders/: default_shader.frag  default_shader.vert
android/app/src/main/assets/res/values/: strings.xml
android/app/src/main/cpp/: native-lib.cpp
android/app/src/main/java/com/drecoengine/matchline/: MainActivity.java
android/app/src/main/java/com/gloryofnight/examplegame/: MainActivity.java
android/app/src/main/java/org/libsdl/app/: README.md  SDLActivity.java
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/com/gloryofnight/examplegame/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
dreco-engine/: CMakeLists.txt
dreco-engine/Source/Core/: engine.cxx  engine.hxx
dreco-engine/src/core/: audio_manager.cxx  audio_manager.hxx  engine.cxx  engine.hxx  engine_properties.hxx  resource_manager.cxx  resource_manager.hxx  sdl_event_manager.cxx  sdl_event_manager.hxx  types.hxx
dreco-engine/src/core/resource_manager/: resource.cxx  resource.hxx  resource_manager.cxx  resource_manager.hxx  resource_type.hxx
dreco-engine/src/game_objects/: camera_base.cxx  camera_base.hxx  game_base.cxx  game_base.hxx  game_object.cxx  game_object.hxx  game_world.cxx  game_world.hxx  mesh_object.cxx  mesh_object.hxx
dreco-engine/src/math/: int_vec2.cxx  int_vec2.hxx  mat2x3.cxx  mat2x3.hxx  mat3x4.cxx  mat3x4.hpp  point.hxx  point2D.hxx  transform.cxx  transform.hxx  uint8_vec2.cxx  uint8_vec2.hxx  vec2.cxx  vec2.hxx  vec3.cxx  vec3.hxx  vectors.hxx
dreco-engine/src/renderer/: gl_check.hxx  gl_es2_renderer.cxx  gl_es2_renderer.hxx  gl_inline_functions.hxx  gl_mesh_buffers_info.hxx  gl_shader_base.cxx  gl_shader_base.hxx  gl_shader_info.hxx  load_gl_func.hxx  mesh_data.hxx  opengles2_renderer.cxx  opengles2_renderer.hxx  shader_gl_base.cxx  shader_gl_base.hxx  shader_properties.hxx  shader_utils.cxx  shader_utils.hxx  texture.cxx  texture.hxx  vertex.hxx  vertex_properties.cxx  vertex_properties.hxx
dreco-engine/src/resources/: audio.cxx  audio.hxx  file_source.cxx  file_source.hxx  music.cxx  music.hxx  resource.cxx  resource_type.hxx  texture.cxx  texture.hxx
dreco-engine/src/utils/: file_utils.cxx  file_utils.hxx  math_utils.cxx  math_utils.hxx  tps_counter.hxx
example-game/: CMakeLists.txt
example-game/res/shaders/: default_shader.frag  default_shader.vert  vert_default.vert
example-game/src/: game_instance.cxx  game_instance.hxx  game_main.cxx  world.cxx  world.hxx
example-game/src/game/: board_cell.cxx  board_cell.hxx  board_constants.hxx  cell_states.hxx  game_board.cxx  game_board.hxx  gem.cxx  gem.hxx  gem_fall_component.cxx  gem_fall_component.hxx  gem_types.hxx
matchline/: CMakeLists.txt
matchline/android/: key_store.jks
matchline/res/shaders/: default_shader.frag
matchline/src/: game_instance.cxx  game_instance.hxx  game_main.cxx  world.cxx  world.hxx
matchline/src/game/: board_cell.cxx  game_board.cxx  game_board.hxx  gem.cxx  gem.hxx  resources_paths.hxx
